--- a/Documentation/latex/annotated.tex
+++ b/Documentation/latex/annotated.tex
@@ -1,9 +1,10 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\-:\begin{DoxyCompactList}
 \item\contentsline{section}{\hyperlink{classClassDetail}{Class\-Detail} }{\pageref{classClassDetail}}{}
+\item\contentsline{section}{\hyperlink{classDatabase}{Database} }{\pageref{classDatabase}}{}
 \item\contentsline{section}{\hyperlink{classInputDetail}{Input\-Detail} }{\pageref{classInputDetail}}{}
 \item\contentsline{section}{\hyperlink{classInputFieldName}{Input\-Field\-Name} }{\pageref{classInputFieldName}}{}
-\item\contentsline{section}{\hyperlink{classMySQL}{My\-S\-Q\-L} }{\pageref{classMySQL}}{}
+\item\contentsline{section}{\hyperlink{classLogin}{Login} }{\pageref{classLogin}}{}
 \item\contentsline{section}{\hyperlink{classPageLayout}{Page\-Layout} }{\pageref{classPageLayout}}{}
 \item\contentsline{section}{\hyperlink{classPageStructureMaker}{Page\-Structure\-Maker} }{\pageref{classPageStructureMaker}}{}
 \item\contentsline{section}{\hyperlink{classReadInputField}{Read\-Input\-Field} }{\pageref{classReadInputField}}{}
