--- a/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
+++ b/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
@@ -32,6 +32,10 @@ file {\bfseries inputfieldname.\-cc}
 \item 
 file {\bfseries inputfieldname.\-h}
 \item 
+file {\bfseries login.\-cc}
+\item 
+file {\bfseries login.\-h}
+\item 
 file {\bfseries pagelayout.\-cc}
 \item 
 file {\bfseries pagelayout.\-h}
