--- a/Documentation/latex/hierarchy.tex
+++ b/Documentation/latex/hierarchy.tex
@@ -1,7 +1,8 @@
 \section{Class Hierarchy}
 This inheritance list is sorted roughly, but not completely, alphabetically\-:\begin{DoxyCompactList}
+\item \contentsline{section}{Database}{\pageref{classDatabase}}{}
 \item \contentsline{section}{Input\-Field\-Name}{\pageref{classInputFieldName}}{}
-\item \contentsline{section}{My\-S\-Q\-L}{\pageref{classMySQL}}{}
+\item \contentsline{section}{Login}{\pageref{classLogin}}{}
 \item \contentsline{section}{Page\-Structure\-Maker}{\pageref{classPageStructureMaker}}{}
 \begin{DoxyCompactList}
 \item \contentsline{section}{Page\-Layout}{\pageref{classPageLayout}}{}
