--- a/Documentation/latex/classPageLayout.tex
+++ b/Documentation/latex/classPageLayout.tex
@@ -28,11 +28,9 @@ void \hyperlink{classPageLayout_ae50907d56f0ba7a85f7ccfdeafa45bcc}{Head} (string
 \item 
 void \hyperlink{classPageLayout_a449b4dde24cf3dc10299dc3c7bfc0e9c}{Set\-Cookies} (string email\-I\-D, string \hyperlink{classPageLayout_ab796c4a12a3f9c089881085e508e2a1c}{session\-I\-D})
 \item 
-void \hyperlink{classPageLayout_a279763d617259e21afbf7bc8d65a3c57}{Un\-Set\-Cookies} ()
-\item 
 void \hyperlink{classPageLayout_a9884173383d3e9b91e5b4ba6a619caa9}{Context\-Type} ()
 \item 
-void \hyperlink{classPageLayout_a060621cba0434c5d60dff14b2ee1584b}{Log\-Out\-Link} ()
+void \hyperlink{classPageLayout_abe2cfa43480c1b48125b3d618cab7831}{Logout\-Link} ()
 \item 
 void \hyperlink{classPageStructureMaker_aaf78d67380c400cc0057c6519276f721}{Set\-H\-T\-M\-L\-Variables} ()
 \item 
@@ -233,9 +231,15 @@ Definition at line 436 of file pagestructure.\-cc.
 {}
 \end{DoxyParamCaption}
 )}}\label{classPageLayout_a9884173383d3e9b91e5b4ba6a619caa9}
-Context-\/\-Type header 
+Context-\/\-Type header
 
-Definition at line 160 of file pagelayout.\-cc.
+--------------------------------------------------------------------\par
+ Class\-: \hyperlink{classPageLayout}{Page\-Layout} \par
+ Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: Context\-Type \par
+ Description\-: Setting content-\/type header \par
+ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 162 of file pagelayout.\-cc.
 
 \hypertarget{classPageStructureMaker_aacdb11817f8ab246bc59c552e04e862d}{\index{Page\-Layout@{Page\-Layout}!C\-S\-S@{C\-S\-S}}
 \index{C\-S\-S@{C\-S\-S}!PageLayout@{Page\-Layout}}
@@ -292,7 +296,7 @@ Reimplemented in \hyperlink{classInputDetail_acbc05b1bc6a371cf0a52222cc95e467d}{
 
 
 
-Definition at line 188 of file pagelayout.\-cc.
+Definition at line 190 of file pagelayout.\-cc.
 
 \hypertarget{classPageStructureMaker_a65d97f23bb543f3db5201b2009f7f65a}{\index{Page\-Layout@{Page\-Layout}!Form\-End@{Form\-End}}
 \index{Form\-End@{Form\-End}!PageLayout@{Page\-Layout}}
@@ -512,22 +516,22 @@ Logo on Page
 
 Definition at line 74 of file pagelayout.\-cc.
 
-\hypertarget{classPageLayout_a060621cba0434c5d60dff14b2ee1584b}{\index{Page\-Layout@{Page\-Layout}!Log\-Out\-Link@{Log\-Out\-Link}}
-\index{Log\-Out\-Link@{Log\-Out\-Link}!PageLayout@{Page\-Layout}}
-\subsubsection[{Log\-Out\-Link}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Log\-Out\-Link (
+\hypertarget{classPageLayout_abe2cfa43480c1b48125b3d618cab7831}{\index{Page\-Layout@{Page\-Layout}!Logout\-Link@{Logout\-Link}}
+\index{Logout\-Link@{Logout\-Link}!PageLayout@{Page\-Layout}}
+\subsubsection[{Logout\-Link}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Logout\-Link (
 \begin{DoxyParamCaption}
 {}
 \end{DoxyParamCaption}
-)}}\label{classPageLayout_a060621cba0434c5d60dff14b2ee1584b}
+)}}\label{classPageLayout_abe2cfa43480c1b48125b3d618cab7831}
 Logout link
 
 --------------------------------------------------------------------\par
  Class\-: \hyperlink{classPageLayout}{Page\-Layout} \par
- Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: \hyperlink{classPageLayout_a060621cba0434c5d60dff14b2ee1584b}{Log\-Out\-Link()} \par
+ Method\-: \hyperlink{classPageLayout}{Page\-Layout} \-:\-: Log\-Out\-Link() \par
  Description\-: logout link \par
  -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
 
-Definition at line 173 of file pagelayout.\-cc.
+Definition at line 175 of file pagelayout.\-cc.
 
 \hypertarget{classPageLayout_a49af1dca286bbee9432192a7b3c00332}{\index{Page\-Layout@{Page\-Layout}!Menu@{Menu}}
 \index{Menu@{Menu}!PageLayout@{Page\-Layout}}
@@ -665,17 +669,6 @@ Display $<$\-T\-I\-T\-L\-E$>$ $<$/\-T\-I\-T\-L\-E$>$
 -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classPageStructureMaker}{Page\-Structure\-Maker} Method\-: \hyperlink{classPageStructureMaker}{Page\-Structure\-Maker} \-:\-: \hyperlink{classPageStructureMaker_a81e902ddc0c0287df1ba0f614a3774d6}{Title(string page\-Title)} Description\-: Display Page Tile -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
 
 Definition at line 125 of file pagestructure.\-cc.
-
-\hypertarget{classPageLayout_a279763d617259e21afbf7bc8d65a3c57}{\index{Page\-Layout@{Page\-Layout}!Un\-Set\-Cookies@{Un\-Set\-Cookies}}
-\index{Un\-Set\-Cookies@{Un\-Set\-Cookies}!PageLayout@{Page\-Layout}}
-\subsubsection[{Un\-Set\-Cookies}]{\setlength{\rightskip}{0pt plus 5cm}void Page\-Layout\-::\-Un\-Set\-Cookies (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)}}\label{classPageLayout_a279763d617259e21afbf7bc8d65a3c57}
-Unset cookies 
-
-Definition at line 154 of file pagelayout.\-cc.
 
 
 
