--- a/Documentation/latex/classReadInputField.tex
+++ b/Documentation/latex/classReadInputField.tex
@@ -9,22 +9,20 @@
 \begin{DoxyCompactItemize}
 \item 
 \hyperlink{classReadInputField_aae743343381035c28a3a0111fc353c7f}{Read\-Input\-Field} ()
-\begin{DoxyCompactList}\small\item\em Constructor. \end{DoxyCompactList}\item 
-string \hyperlink{classReadInputField_a7f6e49b47412649644cc644927ccc682}{Read\-Field\-Value} (string field\-Name)
-\begin{DoxyCompactList}\small\item\em Public Member Functions. \end{DoxyCompactList}\item 
-string \hyperlink{classReadInputField_accf7ceba77721a35968c69268e4e559e}{Read\-Field\-Value} (string field\-Name, int field\-No)
 \item 
-int \hyperlink{classReadInputField_a567466724dfe4f76bd599bde7c565f47}{String\-To\-Int} (string value)
-\begin{DoxyCompactList}\small\item\em Convert String to Integer. \end{DoxyCompactList}\end{DoxyCompactItemize}
+string \hyperlink{classReadInputField_a7f6e49b47412649644cc644927ccc682}{Read\-Field\-Value} (string field\-Name)
+\item 
+string \hyperlink{classReadInputField_accf7ceba77721a35968c69268e4e559e}{Read\-Field\-Value} (string field\-Name, int field\-No)
+\end{DoxyCompactItemize}
 \subsection*{Protected Attributes}
 \begin{DoxyCompactItemize}
 \item 
-string \hyperlink{classReadInputField_a0d95496b5fc8fb4badd4af19492182ae}{field\-Value}
-\begin{DoxyCompactList}\small\item\em For storing value of field. \end{DoxyCompactList}\item 
-Cgicc \hyperlink{classReadInputField_a1e4ebac8979fd9b2771320d669fce5fc}{form\-Data}
-\begin{DoxyCompactList}\small\item\em Variables used in reading input fields. \end{DoxyCompactList}\item 
-\hypertarget{classReadInputField_ae252dc321be04c2c1afa6928ad16a45d}{form\-\_\-iterator {\bfseries fi}}\label{classReadInputField_ae252dc321be04c2c1afa6928ad16a45d}
+\hypertarget{classReadInputField_a0d95496b5fc8fb4badd4af19492182ae}{string {\bfseries field\-Value}}\label{classReadInputField_a0d95496b5fc8fb4badd4af19492182ae}
 
+\item 
+Cgicc \hyperlink{classReadInputField_a1e4ebac8979fd9b2771320d669fce5fc}{form\-Data}
+\item 
+form\-\_\-iterator \hyperlink{classReadInputField_ae252dc321be04c2c1afa6928ad16a45d}{fi}
 \end{DoxyCompactItemize}
 
 
@@ -43,13 +41,9 @@ Definition at line 36 of file readinputfield.\-h.
 {}
 \end{DoxyParamCaption}
 )\hspace{0.3cm}{\ttfamily [inline]}}}\label{classReadInputField_aae743343381035c28a3a0111fc353c7f}
+Constructor 
 
-
-Constructor. 
-
-
-
-Definition at line 48 of file readinputfield.\-h.
+Definition at line 51 of file readinputfield.\-h.
 
 
 
@@ -61,10 +55,6 @@ Definition at line 48 of file readinputfield.\-h.
 \item[{string}]{field\-Name}
 \end{DoxyParamCaption}
 )}}\label{classReadInputField_a7f6e49b47412649644cc644927ccc682}
-
-
-Public Member Functions. 
-
 Read Field's Value with one argument field\-Name
 
 -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Include Header file of \hyperlink{classReadInputField}{Read\-Input\-Field} class declaration ------------------------------------------------------------------ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Definition of member functions of \hyperlink{classReadInputField}{Read\-Input\-Field} Class ------------------------------------------------------------------ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classReadInputField}{Read\-Input\-Field} Method\-: \hyperlink{classReadInputField}{Read\-Input\-Field} \-:\-: \hyperlink{classReadInputField_a7f6e49b47412649644cc644927ccc682}{Read\-Field\-Value(string field\-Name)} Description\-: Read field's value and return it as string -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
@@ -85,43 +75,20 @@ Read Field's value with two arguments field\-Name and field no.)
 
 Definition at line 60 of file readinputfield.\-cc.
 
-\hypertarget{classReadInputField_a567466724dfe4f76bd599bde7c565f47}{\index{Read\-Input\-Field@{Read\-Input\-Field}!String\-To\-Int@{String\-To\-Int}}
-\index{String\-To\-Int@{String\-To\-Int}!ReadInputField@{Read\-Input\-Field}}
-\subsubsection[{String\-To\-Int}]{\setlength{\rightskip}{0pt plus 5cm}int Read\-Input\-Field\-::\-String\-To\-Int (
-\begin{DoxyParamCaption}
-\item[{string}]{value}
-\end{DoxyParamCaption}
-)}}\label{classReadInputField_a567466724dfe4f76bd599bde7c565f47}
-
-
-Convert String to Integer. 
-
--\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classReadInputField}{Read\-Input\-Field} Method\-: \hyperlink{classReadInputField}{Read\-Input\-Field} \-:\-: \hyperlink{classReadInputField_a567466724dfe4f76bd599bde7c565f47}{String\-To\-Int(string value)} Description\-: Converts string value to integer -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
-
-Definition at line 77 of file readinputfield.\-cc.
-
 
 
 \subsection{Member Data Documentation}
-\hypertarget{classReadInputField_a0d95496b5fc8fb4badd4af19492182ae}{\index{Read\-Input\-Field@{Read\-Input\-Field}!field\-Value@{field\-Value}}
-\index{field\-Value@{field\-Value}!ReadInputField@{Read\-Input\-Field}}
-\subsubsection[{field\-Value}]{\setlength{\rightskip}{0pt plus 5cm}string Read\-Input\-Field\-::field\-Value\hspace{0.3cm}{\ttfamily [protected]}}}\label{classReadInputField_a0d95496b5fc8fb4badd4af19492182ae}
+\hypertarget{classReadInputField_ae252dc321be04c2c1afa6928ad16a45d}{\index{Read\-Input\-Field@{Read\-Input\-Field}!fi@{fi}}
+\index{fi@{fi}!ReadInputField@{Read\-Input\-Field}}
+\subsubsection[{fi}]{\setlength{\rightskip}{0pt plus 5cm}form\-\_\-iterator Read\-Input\-Field\-::fi\hspace{0.3cm}{\ttfamily [protected]}}}\label{classReadInputField_ae252dc321be04c2c1afa6928ad16a45d}
+Form Iterator 
 
-
-For storing value of field. 
-
-
-
-Definition at line 40 of file readinputfield.\-h.
+Definition at line 44 of file readinputfield.\-h.
 
 \hypertarget{classReadInputField_a1e4ebac8979fd9b2771320d669fce5fc}{\index{Read\-Input\-Field@{Read\-Input\-Field}!form\-Data@{form\-Data}}
 \index{form\-Data@{form\-Data}!ReadInputField@{Read\-Input\-Field}}
 \subsubsection[{form\-Data}]{\setlength{\rightskip}{0pt plus 5cm}Cgicc Read\-Input\-Field\-::form\-Data\hspace{0.3cm}{\ttfamily [protected]}}}\label{classReadInputField_a1e4ebac8979fd9b2771320d669fce5fc}
-
-
-Variables used in reading input fields. 
-
-
+Read Form Data 
 
 Definition at line 43 of file readinputfield.\-h.
 
