--- a/Documentation/latex/classClassDetail.tex
+++ b/Documentation/latex/classClassDetail.tex
@@ -18,6 +18,8 @@ Inheritance diagram for Class\-Detail\-:\begin{figure}[H]
 \item 
 void \hyperlink{classClassDetail_a71de8308b8c43fed23a959fe39096ce4}{Project\-Detail} ()
 \item 
+void \hyperlink{classClassDetail_a7f2913b5735282db82ab3ff363b14ce4}{Total\-Classes} ()
+\item 
 void \hyperlink{classClassDetail_a68ba42aa7102ab0394366dd836c87790}{Total\-Classes\-Page} ()
 \item 
 void \hyperlink{classClassDetail_a509620b067879d20c329d1bb33d509d7}{Class\-Info\-Page} ()
@@ -230,7 +232,7 @@ Destructor
  Description\-: Destructor \par
  -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
 
-Definition at line 255 of file classdetail.\-cc.
+Definition at line 276 of file classdetail.\-cc.
 
 
 
@@ -306,7 +308,7 @@ Get class details like class name, subject name and subject code
 
 -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classClassDetail}{Class\-Detail} Method\-: \hyperlink{classClassDetail}{Class\-Detail} \-:\-: Class\-Info() Description\-: Get class name, subject code and subject name from user. -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
 
-Definition at line 164 of file classdetail.\-cc.
+Definition at line 183 of file classdetail.\-cc.
 
 \hypertarget{classPageLayout_a9884173383d3e9b91e5b4ba6a619caa9}{\index{Class\-Detail@{Class\-Detail}!Context\-Type@{Context\-Type}}
 \index{Context\-Type@{Context\-Type}!ClassDetail@{Class\-Detail}}
@@ -806,6 +808,23 @@ Display $<$\-T\-I\-T\-L\-E$>$ $<$/\-T\-I\-T\-L\-E$>$
 
 Definition at line 125 of file pagestructure.\-cc.
 
+\hypertarget{classClassDetail_a7f2913b5735282db82ab3ff363b14ce4}{\index{Class\-Detail@{Class\-Detail}!Total\-Classes@{Total\-Classes}}
+\index{Total\-Classes@{Total\-Classes}!ClassDetail@{Class\-Detail}}
+\subsubsection[{Total\-Classes}]{\setlength{\rightskip}{0pt plus 5cm}void Class\-Detail\-::\-Total\-Classes (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{classClassDetail_a7f2913b5735282db82ab3ff363b14ce4}
+read total classes and store it into database
+
+--------------------------------------------------------------------\par
+ Class\-: \hyperlink{classClassDetail}{Class\-Detail} \par
+ Method\-: \hyperlink{classClassDetail}{Class\-Detail} \-:\-: \hyperlink{classClassDetail_a7f2913b5735282db82ab3ff363b14ce4}{Total\-Classes()} \par
+ Description\-: Inserting total\-Classes value ito database \par
+ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 108 of file classdetail.\-cc.
+
 \hypertarget{classClassDetail_a68ba42aa7102ab0394366dd836c87790}{\index{Class\-Detail@{Class\-Detail}!Total\-Classes\-Page@{Total\-Classes\-Page}}
 \index{Total\-Classes\-Page@{Total\-Classes\-Page}!ClassDetail@{Class\-Detail}}
 \subsubsection[{Total\-Classes\-Page}]{\setlength{\rightskip}{0pt plus 5cm}void Class\-Detail\-::\-Total\-Classes\-Page (
@@ -815,9 +834,9 @@ Definition at line 125 of file pagestructure.\-cc.
 )}}\label{classClassDetail_a68ba42aa7102ab0394366dd836c87790}
 Get total classes
 
--\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classClassDetail}{Class\-Detail} Method\-: \hyperlink{classClassDetail}{Class\-Detail} \-:\-: Total\-Classes() Description\-: Get Total classes from user -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classClassDetail}{Class\-Detail} Method\-: \hyperlink{classClassDetail}{Class\-Detail} \-:\-: \hyperlink{classClassDetail_a7f2913b5735282db82ab3ff363b14ce4}{Total\-Classes()} Description\-: Get Total classes from user -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
 
-Definition at line 109 of file classdetail.\-cc.
+Definition at line 125 of file classdetail.\-cc.
 
 
 
