--- a/Documentation/latex/classDatabase.tex
+++ b/Documentation/latex/classDatabase.tex
@@ -12,21 +12,35 @@
 \item 
 void \hyperlink{classDatabase_aec3d0f84e49a58a59f254c90193c1303}{Select\-Query} (string column, string table, vector$<$ string $>$ \&result)
 \item 
+void \hyperlink{classDatabase_a958467134aa40db133cdf6d46ab52c86}{Select\-Query} (string column, string table, string \&result, string where)
+\item 
 void \hyperlink{classDatabase_a6fb9e249cb97830af86c00804bb209a2}{Select\-Column} (string query, vector$<$ string $>$ \&result)
 \item 
 void \hyperlink{classDatabase_a20f7ccadac8f3b67d4344f7da4594eda}{Select\-Project\-I\-D} (string \&project\-I\-D)
 \item 
-void \hyperlink{classDatabase_a62ef4b0467047a68718dcc41a1851684}{Insert\-Into\-User} (string user\-Email\-I\-D, string user\-Password)
+void \hyperlink{classDatabase_a7070d93bf44c5f90504944f54607b9b0}{Insert\-User} (string user\-Email\-I\-D, string user\-Password)
 \item 
 void \hyperlink{classDatabase_a63d8c1af7507b1dcdc81a411f9a0b4b4}{Insert\-Query} (string query)
 \item 
 void \hyperlink{classDatabase_a513326ea43b2455177731fbc92c4bf4f}{Insert\-Query} (string column, string value, string table)
 \item 
-void \hyperlink{classDatabase_a8d7a5fe5f7b24d41ed165bc2fa565337}{Insert\-Into\-Session} (string email\-I\-D, string session\-I\-D)
+void \hyperlink{classDatabase_a478f862bd338a92b13c2899bb4e28843}{Insert\-Session} (string email\-I\-D, string session\-I\-D)
 \item 
-void \hyperlink{classDatabase_a1f9b19ec52568cd279e3a4408771b5bb}{Insert\-Into\-Project\-Name} (string email\-I\-D, string project\-Name, string project\-I\-D)
+void \hyperlink{classDatabase_aae19d9dac16779519f94cc68e29cb57d}{Insert\-Project\-Name} (string email\-I\-D, string project\-Name)
 \item 
-void \hyperlink{classDatabase_ad9d81a21631f250d487d1f9e6956f3df}{Select\-Query} (string project\-I\-D)
+void \hyperlink{classDatabase_ad6af2dc859cda41dcbdad9cd51f5c38b}{Insert\-Total\-Classes} (string project\-I\-D, string total\-Classes)
+\item 
+void \hyperlink{classDatabase_ad0052cd5a48f5ba3233395096ba6e422}{Insert\-Class\-Detail} (string project\-I\-D, string class\-Name, string subject\-Name, string subject\-Code)
+\item 
+void \hyperlink{classDatabase_a8e52c1b853b6f1d96cf7053f0268838d}{Insert\-Total\-Centres} (string project\-I\-D, string total\-Centre)
+\item 
+void \hyperlink{classDatabase_a8b248d14e1cb2fc4ba2c9da313f385cb}{Insert\-Room\-Detail} (string project\-I\-D, string centre\-Name, string room\-No, string rows, string columns)
+\item 
+void \hyperlink{classDatabase_a6cd1b1181fb636aff93ba43f0fcd2764}{Insert\-Total\-Rooms} (string project\-I\-D, string centre\-Name, string totalrooms)
+\item 
+void \hyperlink{classDatabase_a0a1ec932aafeef96637d5ee68ac7898b}{Insert\-Exam\-Detail} (string project\-I\-D, string exam\-Name, string exam\-Date, string exam\-Time, string exam\-Venue)
+\item 
+void \hyperlink{classDatabase_a6015ae56eb561f579e573be709ef434c}{Insert\-Strategy} (string project\-I\-D, string strategy)
 \item 
 \hyperlink{classDatabase_a84d399a2ad58d69daab9b05330e1316d}{$\sim$\-Database} ()
 \end{DoxyCompactItemize}
@@ -90,69 +104,73 @@ Definition at line 33 of file database.\-cc.
 {}
 \end{DoxyParamCaption}
 )}}\label{classDatabase_a84d399a2ad58d69daab9b05330e1316d}
-\hyperlink{classDatabase}{Database} Destructor
+Select last project Id of project name \hyperlink{classDatabase}{Database} Destructor
 
 -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ Class\-: \hyperlink{classDatabase}{Database} Method\-: \hyperlink{classDatabase}{Database} \-:\-: \hyperlink{classDatabase_a84d399a2ad58d69daab9b05330e1316d}{$\sim$\-Database()} Description\-: Destructor for closing database connectivity -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
 
-Definition at line 216 of file database.\-cc.
+Definition at line 400 of file database.\-cc.
 
 
 
 \subsection{Member Function Documentation}
-\hypertarget{classDatabase_a1f9b19ec52568cd279e3a4408771b5bb}{\index{Database@{Database}!Insert\-Into\-Project\-Name@{Insert\-Into\-Project\-Name}}
-\index{Insert\-Into\-Project\-Name@{Insert\-Into\-Project\-Name}!Database@{Database}}
-\subsubsection[{Insert\-Into\-Project\-Name}]{\setlength{\rightskip}{0pt plus 5cm}void Database\-::\-Insert\-Into\-Project\-Name (
+\hypertarget{classDatabase_ad0052cd5a48f5ba3233395096ba6e422}{\index{Database@{Database}!Insert\-Class\-Detail@{Insert\-Class\-Detail}}
+\index{Insert\-Class\-Detail@{Insert\-Class\-Detail}!Database@{Database}}
+\subsubsection[{Insert\-Class\-Detail}]{\setlength{\rightskip}{0pt plus 5cm}void Database\-::\-Insert\-Class\-Detail (
+\begin{DoxyParamCaption}
+\item[{string}]{project\-I\-D, }
+\item[{string}]{class\-Name, }
+\item[{string}]{subject\-Name, }
+\item[{string}]{subject\-Code}
+\end{DoxyParamCaption}
+)}}\label{classDatabase_ad0052cd5a48f5ba3233395096ba6e422}
+Insert into \hyperlink{classClassDetail}{Class\-Detail}
+
+--------------------------------------------------------------------\par
+ Class\-: \hyperlink{classDatabase}{Database} \par
+ Method\-: \hyperlink{classDatabase}{Database} \-:\-: Insert\-Class\-Detail(project\-I\-D, class\-Name, subject\-Name, subject\-Code) \par
+ Description\-: Inserting class detail into table \par
+ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 258 of file database.\-cc.
+
+\hypertarget{classDatabase_a0a1ec932aafeef96637d5ee68ac7898b}{\index{Database@{Database}!Insert\-Exam\-Detail@{Insert\-Exam\-Detail}}
+\index{Insert\-Exam\-Detail@{Insert\-Exam\-Detail}!Database@{Database}}
+\subsubsection[{Insert\-Exam\-Detail}]{\setlength{\rightskip}{0pt plus 5cm}void Database\-::\-Insert\-Exam\-Detail (
+\begin{DoxyParamCaption}
+\item[{string}]{project\-I\-D, }
+\item[{string}]{exam\-Name, }
+\item[{string}]{exam\-Date, }
+\item[{string}]{exam\-Time, }
+\item[{string}]{exam\-Venue}
+\end{DoxyParamCaption}
+)}}\label{classDatabase_a0a1ec932aafeef96637d5ee68ac7898b}
+Insert into exam detail
+
+--------------------------------------------------------------------\par
+ Class\-: \hyperlink{classDatabase}{Database} \par
+ Method\-: \hyperlink{classDatabase}{Database} \-:\-: Insert\-Total\-Rooms(project\-I\-D, exam\-Name, exam\-Date, exam\-Time, exam\-Venue) \par
+ Description\-: store data into exam detail \par
+ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 354 of file database.\-cc.
+
+\hypertarget{classDatabase_aae19d9dac16779519f94cc68e29cb57d}{\index{Database@{Database}!Insert\-Project\-Name@{Insert\-Project\-Name}}
+\index{Insert\-Project\-Name@{Insert\-Project\-Name}!Database@{Database}}
+\subsubsection[{Insert\-Project\-Name}]{\setlength{\rightskip}{0pt plus 5cm}void Database\-::\-Insert\-Project\-Name (
 \begin{DoxyParamCaption}
 \item[{string}]{email\-I\-D, }
-\item[{string}]{project\-Name, }
-\item[{string}]{project\-I\-D}
+\item[{string}]{project\-Name}
 \end{DoxyParamCaption}
-)}}\label{classDatabase_a1f9b19ec52568cd279e3a4408771b5bb}
+)}}\label{classDatabase_aae19d9dac16779519f94cc68e29cb57d}
 Insert Project detail into Project\-Name table
 
 --------------------------------------------------------------------\par
  Class\-: \hyperlink{classDatabase}{Database} \par
- Method\-: \hyperlink{classDatabase}{Database} \-:\-: \hyperlink{classDatabase_a1f9b19ec52568cd279e3a4408771b5bb}{Insert\-Into\-Project\-Name()} \par
+ Method\-: \hyperlink{classDatabase}{Database} \-:\-: Insert\-Into\-Project\-Name() \par
  Description\-: Insert project name into Project\-Name table \par
  -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
 
-Definition at line 194 of file database.\-cc.
-
-\hypertarget{classDatabase_a8d7a5fe5f7b24d41ed165bc2fa565337}{\index{Database@{Database}!Insert\-Into\-Session@{Insert\-Into\-Session}}
-\index{Insert\-Into\-Session@{Insert\-Into\-Session}!Database@{Database}}
-\subsubsection[{Insert\-Into\-Session}]{\setlength{\rightskip}{0pt plus 5cm}void Database\-::\-Insert\-Into\-Session (
-\begin{DoxyParamCaption}
-\item[{string}]{email\-I\-D, }
-\item[{string}]{session\-I\-D}
-\end{DoxyParamCaption}
-)}}\label{classDatabase_a8d7a5fe5f7b24d41ed165bc2fa565337}
-Insert into Session table
-
---------------------------------------------------------------------\par
- Class\-: \hyperlink{classDatabase}{Database} \par
- Method\-: \hyperlink{classDatabase}{Database} \-:\-: Insert\-Into\-Session(string email\-I\-D, string session\-I\-D) \par
- Description\-: Inserting Session information in database \par
- -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
-
-Definition at line 175 of file database.\-cc.
-
-\hypertarget{classDatabase_a62ef4b0467047a68718dcc41a1851684}{\index{Database@{Database}!Insert\-Into\-User@{Insert\-Into\-User}}
-\index{Insert\-Into\-User@{Insert\-Into\-User}!Database@{Database}}
-\subsubsection[{Insert\-Into\-User}]{\setlength{\rightskip}{0pt plus 5cm}void Database\-::\-Insert\-Into\-User (
-\begin{DoxyParamCaption}
-\item[{string}]{user\-Email\-I\-D, }
-\item[{string}]{user\-Password}
-\end{DoxyParamCaption}
-)}}\label{classDatabase_a62ef4b0467047a68718dcc41a1851684}
-For inserting new user in database
-
---------------------------------------------------------------------\par
- Class\-: \hyperlink{classDatabase}{Database} \par
- Method\-: \hyperlink{classDatabase}{Database} \-:\-: Insert\-Into\-User(string user\-Email\-I\-D, string user\-Password) \par
- Description\-: Inserting new user details into database \par
- -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
-
-Definition at line 152 of file database.\-cc.
+Definition at line 217 of file database.\-cc.
 
 \hypertarget{classDatabase_a63d8c1af7507b1dcdc81a411f9a0b4b4}{\index{Database@{Database}!Insert\-Query@{Insert\-Query}}
 \index{Insert\-Query@{Insert\-Query}!Database@{Database}}
@@ -169,7 +187,7 @@ Insert query with one argument
  Description\-: Insrting value in database \par
  -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
 
-Definition at line 112 of file database.\-cc.
+Definition at line 136 of file database.\-cc.
 
 \hypertarget{classDatabase_a513326ea43b2455177731fbc92c4bf4f}{\index{Database@{Database}!Insert\-Query@{Insert\-Query}}
 \index{Insert\-Query@{Insert\-Query}!Database@{Database}}
@@ -188,7 +206,137 @@ Insert Query for adding value in one column
  Description\-: For inserting values in database \par
  -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
 
-Definition at line 129 of file database.\-cc.
+Definition at line 153 of file database.\-cc.
+
+\hypertarget{classDatabase_a8b248d14e1cb2fc4ba2c9da313f385cb}{\index{Database@{Database}!Insert\-Room\-Detail@{Insert\-Room\-Detail}}
+\index{Insert\-Room\-Detail@{Insert\-Room\-Detail}!Database@{Database}}
+\subsubsection[{Insert\-Room\-Detail}]{\setlength{\rightskip}{0pt plus 5cm}void Database\-::\-Insert\-Room\-Detail (
+\begin{DoxyParamCaption}
+\item[{string}]{project\-I\-D, }
+\item[{string}]{centre\-Name, }
+\item[{string}]{room\-No, }
+\item[{string}]{rows, }
+\item[{string}]{columns}
+\end{DoxyParamCaption}
+)}}\label{classDatabase_a8b248d14e1cb2fc4ba2c9da313f385cb}
+Insert into room\-Detail table
+
+--------------------------------------------------------------------\par
+ Class\-: \hyperlink{classDatabase}{Database} \par
+ Method\-: \hyperlink{classDatabase}{Database} \-:\-: Insert\-Room\-Detail(project\-I\-D, centre\-Name, room\-No, rows, columns) \par
+ Description\-: Inserting room detail into table \par
+ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 302 of file database.\-cc.
+
+\hypertarget{classDatabase_a478f862bd338a92b13c2899bb4e28843}{\index{Database@{Database}!Insert\-Session@{Insert\-Session}}
+\index{Insert\-Session@{Insert\-Session}!Database@{Database}}
+\subsubsection[{Insert\-Session}]{\setlength{\rightskip}{0pt plus 5cm}void Database\-::\-Insert\-Session (
+\begin{DoxyParamCaption}
+\item[{string}]{email\-I\-D, }
+\item[{string}]{session\-I\-D}
+\end{DoxyParamCaption}
+)}}\label{classDatabase_a478f862bd338a92b13c2899bb4e28843}
+Insert into Session table
+
+--------------------------------------------------------------------\par
+ Class\-: \hyperlink{classDatabase}{Database} \par
+ Method\-: \hyperlink{classDatabase}{Database} \-:\-: Insert\-Into\-Session(string email\-I\-D, string session\-I\-D) \par
+ Description\-: Inserting Session information in database \par
+ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 198 of file database.\-cc.
+
+\hypertarget{classDatabase_a6015ae56eb561f579e573be709ef434c}{\index{Database@{Database}!Insert\-Strategy@{Insert\-Strategy}}
+\index{Insert\-Strategy@{Insert\-Strategy}!Database@{Database}}
+\subsubsection[{Insert\-Strategy}]{\setlength{\rightskip}{0pt plus 5cm}void Database\-::\-Insert\-Strategy (
+\begin{DoxyParamCaption}
+\item[{string}]{project\-I\-D, }
+\item[{string}]{strategy}
+\end{DoxyParamCaption}
+)}}\label{classDatabase_a6015ae56eb561f579e573be709ef434c}
+Insert into strategy
+
+--------------------------------------------------------------------\par
+ Class\-: \hyperlink{classDatabase}{Database} \par
+ Method\-: \hyperlink{classDatabase}{Database} \-:\-: Insert\-Total\-Rooms(project\-I\-D, strategy) \par
+ Description\-: Strategy value into table \par
+ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 381 of file database.\-cc.
+
+\hypertarget{classDatabase_a8e52c1b853b6f1d96cf7053f0268838d}{\index{Database@{Database}!Insert\-Total\-Centres@{Insert\-Total\-Centres}}
+\index{Insert\-Total\-Centres@{Insert\-Total\-Centres}!Database@{Database}}
+\subsubsection[{Insert\-Total\-Centres}]{\setlength{\rightskip}{0pt plus 5cm}void Database\-::\-Insert\-Total\-Centres (
+\begin{DoxyParamCaption}
+\item[{string}]{project\-I\-D, }
+\item[{string}]{total\-Centre}
+\end{DoxyParamCaption}
+)}}\label{classDatabase_a8e52c1b853b6f1d96cf7053f0268838d}
+Insert into totalcentres
+
+--------------------------------------------------------------------\par
+ Class\-: \hyperlink{classDatabase}{Database} \par
+ Method\-: \hyperlink{classDatabase}{Database} \-:\-: Inserttotal\-Centres(project\-I\-D,totalcentre) \par
+ Description\-: Inserting into table total centrres \par
+ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 281 of file database.\-cc.
+
+\hypertarget{classDatabase_ad6af2dc859cda41dcbdad9cd51f5c38b}{\index{Database@{Database}!Insert\-Total\-Classes@{Insert\-Total\-Classes}}
+\index{Insert\-Total\-Classes@{Insert\-Total\-Classes}!Database@{Database}}
+\subsubsection[{Insert\-Total\-Classes}]{\setlength{\rightskip}{0pt plus 5cm}void Database\-::\-Insert\-Total\-Classes (
+\begin{DoxyParamCaption}
+\item[{string}]{project\-I\-D, }
+\item[{string}]{total\-Classes}
+\end{DoxyParamCaption}
+)}}\label{classDatabase_ad6af2dc859cda41dcbdad9cd51f5c38b}
+Insert Into Total\-Classes
+
+--------------------------------------------------------------------\par
+ Class\-: \hyperlink{classDatabase}{Database} \par
+ Method\-: \hyperlink{classDatabase}{Database} \-:\-: Insert\-Total\-Classes(project\-I\-D, total\-Classes) \par
+ Description\-: Inserting total classes into table with project I\-D \par
+ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 237 of file database.\-cc.
+
+\hypertarget{classDatabase_a6cd1b1181fb636aff93ba43f0fcd2764}{\index{Database@{Database}!Insert\-Total\-Rooms@{Insert\-Total\-Rooms}}
+\index{Insert\-Total\-Rooms@{Insert\-Total\-Rooms}!Database@{Database}}
+\subsubsection[{Insert\-Total\-Rooms}]{\setlength{\rightskip}{0pt plus 5cm}void Database\-::\-Insert\-Total\-Rooms (
+\begin{DoxyParamCaption}
+\item[{string}]{project\-I\-D, }
+\item[{string}]{centre\-Name, }
+\item[{string}]{total\-Rooms}
+\end{DoxyParamCaption}
+)}}\label{classDatabase_a6cd1b1181fb636aff93ba43f0fcd2764}
+Insert Into Total\-Rooms
+
+--------------------------------------------------------------------\par
+ Class\-: \hyperlink{classDatabase}{Database} \par
+ Method\-: \hyperlink{classDatabase}{Database} \-:\-: Insert\-Total\-Rooms(project\-I\-D, centre\-Name, totalrooms) \par
+ Description\-: Inserting into total rooms \par
+ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 330 of file database.\-cc.
+
+\hypertarget{classDatabase_a7070d93bf44c5f90504944f54607b9b0}{\index{Database@{Database}!Insert\-User@{Insert\-User}}
+\index{Insert\-User@{Insert\-User}!Database@{Database}}
+\subsubsection[{Insert\-User}]{\setlength{\rightskip}{0pt plus 5cm}void Database\-::\-Insert\-User (
+\begin{DoxyParamCaption}
+\item[{string}]{user\-Email\-I\-D, }
+\item[{string}]{user\-Password}
+\end{DoxyParamCaption}
+)}}\label{classDatabase_a7070d93bf44c5f90504944f54607b9b0}
+For inserting new user in database
+
+--------------------------------------------------------------------\par
+ Class\-: \hyperlink{classDatabase}{Database} \par
+ Method\-: \hyperlink{classDatabase}{Database} \-:\-: Insert\-Into\-User(string user\-Email\-I\-D, string user\-Password) \par
+ Description\-: Inserting new user details into database \par
+ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 176 of file database.\-cc.
 
 \hypertarget{classDatabase_a6fb9e249cb97830af86c00804bb209a2}{\index{Database@{Database}!Select\-Column@{Select\-Column}}
 \index{Select\-Column@{Select\-Column}!Database@{Database}}
@@ -206,7 +354,7 @@ Seclect Column
  Description\-: Select column from table \par
  -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
 
-Definition at line 88 of file database.\-cc.
+Definition at line 112 of file database.\-cc.
 
 \hypertarget{classDatabase_a20f7ccadac8f3b67d4344f7da4594eda}{\index{Database@{Database}!Select\-Project\-I\-D@{Select\-Project\-I\-D}}
 \index{Select\-Project\-I\-D@{Select\-Project\-I\-D}!Database@{Database}}
@@ -215,9 +363,9 @@ Definition at line 88 of file database.\-cc.
 \item[{string \&}]{project\-I\-D}
 \end{DoxyParamCaption}
 )}}\label{classDatabase_a20f7ccadac8f3b67d4344f7da4594eda}
-select project id from user 
+select project id from Project\-Name table 
 
-Definition at line 71 of file database.\-cc.
+Definition at line 95 of file database.\-cc.
 
 \hypertarget{classDatabase_aec3d0f84e49a58a59f254c90193c1303}{\index{Database@{Database}!Select\-Query@{Select\-Query}}
 \index{Select\-Query@{Select\-Query}!Database@{Database}}
@@ -238,14 +386,27 @@ For executing My\-S\-Q\-L query
 
 Definition at line 59 of file database.\-cc.
 
-\hypertarget{classDatabase_ad9d81a21631f250d487d1f9e6956f3df}{\index{Database@{Database}!Select\-Query@{Select\-Query}}
+\hypertarget{classDatabase_a958467134aa40db133cdf6d46ab52c86}{\index{Database@{Database}!Select\-Query@{Select\-Query}}
 \index{Select\-Query@{Select\-Query}!Database@{Database}}
 \subsubsection[{Select\-Query}]{\setlength{\rightskip}{0pt plus 5cm}void Database\-::\-Select\-Query (
 \begin{DoxyParamCaption}
-\item[{string}]{project\-I\-D}
+\item[{string}]{column, }
+\item[{string}]{table, }
+\item[{string \&}]{result, }
+\item[{string}]{where}
 \end{DoxyParamCaption}
-)}}\label{classDatabase_ad9d81a21631f250d487d1f9e6956f3df}
-Select last project Id of project name 
+)}}\label{classDatabase_a958467134aa40db133cdf6d46ab52c86}
+Select query with where clause
+
+--------------------------------------------------------------------\par
+ Class\-: \hyperlink{classDatabase}{Database} \par
+ Method\-: \hyperlink{classDatabase}{Database} \-:\-: Select\-Query(column, table, result, where) \par
+ Description\-: Select column value with where clause \par
+ -\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/-\/ 
+
+Definition at line 79 of file database.\-cc.
+
+
 
 \subsection{Member Data Documentation}
 \hypertarget{classDatabase_aa232b806b05ef654cd5579bca5f1dbad}{\index{Database@{Database}!connect@{connect}}
