--- a/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
+++ b/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
@@ -72,6 +72,8 @@ file {\bfseries readinputfield.\-h}
 \item 
 file {\bfseries register-\/main.\-cpp}
 \item 
+file {\bfseries rollnodetail-\/main.\-cpp}
+\item 
 file {\bfseries rollnodetail.\-cc}
 \item 
 file {\bfseries rollnodetail.\-h}
@@ -79,6 +81,8 @@ file {\bfseries rollnodetail.\-h}
 file {\bfseries roomdetail.\-cc}
 \item 
 file {\bfseries roomdetail.\-h}
+\item 
+file {\bfseries totalcentre-\/main.\-cpp}
 \item 
 file {\bfseries totalclasses-\/main.\-cpp}
 \end{DoxyCompactItemize}
